RESOLVED FIXED128563
IDB: storage/indexeddb/mozilla/indexes.html fails
https://bugs.webkit.org/show_bug.cgi?id=128563
Summary IDB: storage/indexeddb/mozilla/indexes.html fails
Brady Eidson
Reported 2014-02-10 16:23:30 PST
IDB: storage/indexeddb/mozilla/indexes.html fails The reasons are: 1 - For key-only cursors, the wrong version of onSuccess is called. 2 - In debug builds it ASSERTs because in IDBRequest::onSuccess a key injection is attempted with a null keypath... which is silly. No keypath, no key injection. 3 - For NextUnique index cursors, the secondary ordering was wrong (it was Descending, it should be Ascending)
Attachments
Patch v1 (16.27 KB, patch)
2014-02-10 16:28 PST, Brady Eidson
no flags
Radar WebKit Bug Importer
Comment 1 2014-02-10 16:24:20 PST
Brady Eidson
Comment 2 2014-02-10 16:28:22 PST
Created attachment 223767 [details] Patch v1
Tim Horton
Comment 3 2014-02-10 16:53:11 PST
Comment on attachment 223767 [details] Patch v1 View in context: https://bugs.webkit.org/attachment.cgi?id=223767&action=review > Source/WebKit2/DatabaseProcess/IndexedDB/sqlite/SQLiteIDBCursor.cpp:100 > if (hasLowerKey && !isLowerOpen) This is pretty ugly.
WebKit Commit Bot
Comment 4 2014-02-10 18:24:21 PST
Comment on attachment 223767 [details] Patch v1 Clearing flags on attachment: 223767 Committed r163849: <http://trac.webkit.org/changeset/163849>
WebKit Commit Bot
Comment 5 2014-02-10 18:24:23 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.