IDB: storage/indexeddb/mozilla/indexes.html fails <rdar://problem/16031590> and https://bugs.webkit.org/show_bug.cgi?id=128563

Reviewed by Tim Horton.

Source/WebCore:

Tested by storage/indexeddb/mozilla/indexes.html (and probably others)

* Modules/indexeddb/IDBGetResult.h:
(WebCore::IDBGetResult::IDBGetResult): Add a constructor that takes an IDBKeyData argument.

* Modules/indexeddb/IDBRequest.cpp:
(WebCore::IDBRequest::onSuccess): If there’s no keyPath then skip the injection step.

Source/WebKit2:

* DatabaseProcess/IndexedDB/UniqueIDBDatabase.cpp:
(WebKit::UniqueIDBDatabase::getRecordFromBackingStore): Pass the cursor type to the backing store.

* DatabaseProcess/IndexedDB/UniqueIDBDatabaseBackingStore.h:
* DatabaseProcess/IndexedDB/sqlite/UniqueIDBDatabaseBackingStoreSQLite.cpp:
(WebKit::UniqueIDBDatabaseBackingStoreSQLite::getIndexRecord): If it’s a key-only cursor,
  return only the key result.
* DatabaseProcess/IndexedDB/sqlite/UniqueIDBDatabaseBackingStoreSQLite.h:

* DatabaseProcess/IndexedDB/sqlite/SQLiteIDBCursor.cpp:
(WebKit::getIndexStatement): Fix index statement selection so ascending, unique cursors sort correctly.

LayoutTests:

* platform/mac-wk2/TestExpectations: Add the test (still skipped for now due to unrelated reasons).


Canonical link: https://commits.webkit.org/146602@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163849 268f45cc-cd09-0410-ab3c-d52691b4dbfc